# verisure

./: .gitignore  CreateOperator.sh  README.md  Snapshot.txt  api.py  claim_data.json  claim_extractor2.py  dataset.py  docker-compose.yml  oc3.py
Execution_Service/: .gitignore  Dockerfile  index.js
Execution_Service/contracts_zk/: .gitignore  Cargo.toml  deployment-guide.md  foundry.toml  remappings.txt  rust-toolchain.toml  script.sh
Execution_Service/contracts_zk/apps/: Cargo.toml  README.md
Execution_Service/contracts_zk/contracts/: IRiscZeroSelectable.sol  IRiscZeroVerifier.sol  InsuranceEscrow.sol  README.md  Util.sol
Execution_Service/contracts_zk/core/: Cargo.toml
Execution_Service/contracts_zk/methods/guest/: Cargo.toml
Execution_Service/src/: dal.service.js  oracle.service.js  task.controller.js
Validation_Service/: .gitignore  index.js  package.json
Validation_Service/src/: validator.service.js
bash/: CreateOperator.sh
contracts/script/: InsuranceEscrow.sol
contracts/src/: InsuranceEscrow.sol
contracts/test/: InsuranceEscrow.sol
contracts_zk/: .gitmodules  README.md  deployment-guide.md
contracts_zk/apps/: Cargo.toml
contracts_zk/contracts/: IInsuranceEscrow.sol  IRiscZeroSelectable.sol  InsuranceEscrow.sol
contracts_zk/methods/: Cargo.toml  build.rs
contracts_zk/script/: InsuranceEscrow.s.sol  config.toml
contracts_zk/tests/: InsuranceEscrow.t.sol
frontend/: package.json
gaia/: app.py  claim_extractor.py  claim_validator.py  gaia-node-config.json  gaia-node-setup.js  web-interface.html  zk_proof_generator.py
(+270 files in other folders)
